--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <!-- Contenedor del Soul Cycle -->
         <div class="box-2">
             <div class="boxes-arriba">
-                <div class="boxes-arriba-unidad">ÚltimoProyecto</div>
+                <div class="boxes-arriba-unidad color-diferente">Último proyecto</div>
                 <div class="boxes-arriba-unidad arriba-hidde">Consultoria</div>
-                <div class="boxes-arriba-unidad arriba-hidde">UXDesign</div>
+                <div class="boxes-arriba-unidad arriba-hidde">UX Design</div>
                 <div class="boxes-arriba-unidad arriba-hidde">Website</div>
             </div>
             <div class="boxes-abajo">
@@ -44,6 +44,83 @@
                 <div class="boxes-abajo-unidad">Quero ver o projeto</div>
             </div>
         </div>
+
+        <!-- O que fazemos? -->
+        <div class="box-3">
+            <h1>O que fazemos?</h1>
+            <p>Criamos soluções para startups para destacá-las em ambientes competitivos. Estamos comprometidos com uma
+                abordagem centrada no usuário e buscamos humanizar a tecnologia para garantir experiências memoráveis.
+            </p>
+        </div>
+
+        <!-- Nosso processo -->
+        <div class="box-4">
+            <h1>Nosso Processo</h1>
+            <div class="procesos">
+                <div class="proceso-box">1</div>
+                <div class="proceso-box">2</div>
+                <div class="proceso-box">3</div>
+                <div class="proceso-box">4</div>
+            </div>
+        </div>
+
+        <!-- Serviços da empresa -->
+        <div class="box-5">
+            <h1>Realizamos os seguintes serviços para a sua empresa</h1>
+            <div class="servicos">
+                <div class="servicos-box">1</div>
+                <div class="servicos-box">2</div>
+                <div class="servicos-box">3</div>
+                <div class="servicos-box">4</div>
+                <div class="servicos-box">5</div>
+            </div>
+        </div>
+
+        <!-- Nossos clientes -->
+        <div class="box-6">
+            <div class="clientes">1</div>
+            <div class="clientes">2</div>
+            <div class="clientes">3</div>
+        </div>
+
+        <!-- Nossa equipe -->
+        <div class="box-7">
+            <h1>Nossa equipe</h1>
+            <div class="equipe">
+                <div class="equipe-box">1</div>
+                <div class="equipe-box">2</div>
+                <div class="equipe-box">3</div>
+                <div class="equipe-box">4</div>
+            </div>
+        </div>
+
+        <!-- Nosso blog -->
+        <div class="blog">
+            <h1>Nosso blog</h1>
+            <p>Os integrantes são confiáveis e responsáveis para trabalhar com flexibilidade, buscando o equilíbrio
+                entre resultados e saúde.</p>
+        </div>
+
+        <!-- Vamos conversar -->
+        <div class="vamos-conversar">
+            <h1>Vamos conversar!</h1>
+            <p>Conte-nos sobre seu produto, sua linha do tempo, como você ouviu falar sobre nós e onde você está
+                localizado.<br><br>Vamos te ajudar o mais rápido possível e estamos ansiosos para entregar resultado.
+            </p>
+        </div>
+
+        <!-- Formulario -->
+        <form action="">
+            <div class="form-info">
+                <input type="text" name="name" id="name" placeholder="Seu nome"><br>
+                <input type="text" name="name" id="name" placeholder="Seu email"><br>
+                <textarea id="comments" placeholder="Sua mensagem"></textarea><br>
+                <input type="text" name="name" id="name" placeholder="Como nos conheceu?">
+            </div>
+            <div class="form-submit">
+                <button type="submit">Enviar</button>
+            </div>
+        </form>
     </main>
 
     <footer class="footer">
