--- a/index.html
+++ b/index.html
@@ -15,18 +15,29 @@
 <body>
     <header class="header">
         <nav>
-            <div class="header-image">1</div>
-            <div class="header-description">2</div>
-            <div class="header-hamburguer-menu">3</div>
+            <div class="header-image">
+                <img src="./images/aro.svg" alt="logo">
+            </div>
+            <div class="header-description">
+                <p>Sobre nós</p>
+            </div>
+            <div class="header-hamburguer-menu">
+                <img src="./images/menu_mobile.svg" alt="hmaburguer-menu">
+            </div>
         </nav>
     </header>
 
     <main class="main">
         <!-- Contenedor del celular, gif de caritas y scroll -->
         <div class="box-1">
-            <div class="article-1">1</div>
+            <div class="article-1">
+                <h1>Criamos produtos digitais com valor</h1>
+                <p>Por meio de abordagem estratégia e técnica, elevamos o valor percebido do seu produto digital</p>
+            </div>
             <div class="article-2">
-                <div class="gif">2</div>
+                <div class="gif">
+                    <img src="./images/carinhas.svg" alt="carinhas-gift">
+                </div>
                 <div class="scroll">3</div>
             </div>
         </div>
@@ -34,14 +45,16 @@
         <!-- Contenedor del Soul Cycle -->
         <div class="box-2">
             <div class="boxes-arriba">
-                <div class="boxes-arriba-unidad color-diferente">Último proyecto</div>
+                <div class="boxes-arriba-unidad color-diferente">Último projeto</div>
                 <div class="boxes-arriba-unidad arriba-hidde">Consultoria</div>
                 <div class="boxes-arriba-unidad arriba-hidde">UX Design</div>
                 <div class="boxes-arriba-unidad arriba-hidde">Website</div>
             </div>
             <div class="boxes-abajo">
                 <div class="boxes-abajo-unidad">Soul Cycles</div>
-                <div class="boxes-abajo-unidad">Quero ver o projeto</div>
+                <div class="boxes-abajo-unidad">
+                    <img src="./images/export.svg" alt="export">
+                </div>
             </div>
         </div>
 
@@ -53,27 +66,84 @@
             </p>
         </div>
 
+        <!-- Barra cinza -->
+        <div class="space">
+            <div> </div>
+        </div>
+
         <!-- Nosso processo -->
         <div class="box-4">
             <h1>Nosso Processo</h1>
             <div class="procesos">
-                <div class="proceso-box">1</div>
-                <div class="proceso-box">2</div>
-                <div class="proceso-box">3</div>
-                <div class="proceso-box">4</div>
+                <div class="proceso-box proceso-1">
+                    <h1>Descobrir</h1>
+                    <p>Compreendemos o problema a fundo por meio de pesquisas e explorando o contexto do produto.</p>
+                </div>
+                <div class="proceso-box proceso-2">
+                    <h1>Definir</h1>
+                    <p>Desenvolvemos o conceito a partir da pesquisa, abordando o problema de forma direta.</p>
+                </div>
+                <div class="proceso-box proceso-3">
+                    <h1>Desenvolver</h1>
+                    <p>Ideamos principais soluções e caminhos possíveis a partir de um processo criativo e técnico.</p>
+                </div>
+                <div class="proceso-box proceso-4">
+                    <h1>Entregar</h1>
+                    <p>Materializamos a solução e testamos para garantir o melhor refinamento do produto criado.</p>
+                </div>
             </div>
+        </div>
+
+        <!-- Barra cinza -->
+        <div class="space">
+            <div> </div>
         </div>
 
         <!-- Serviços da empresa -->
         <div class="box-5">
-            <h1>Realizamos os seguintes serviços para a sua empresa</h1>
+            <h1>Nossos serviços</h1>
             <div class="servicos">
-                <div class="servicos-box">1</div>
-                <div class="servicos-box">2</div>
-                <div class="servicos-box">3</div>
-                <div class="servicos-box">4</div>
-                <div class="servicos-box">5</div>
+                <div class="space-2">
+                    <div> </div>
+                </div>
+                <div class="servicos-box">
+                    <h1>Design System</h1>
+                    <p>Criamos uma estrutura visual sólida para guiar o processo de criação, facilitando o uso em diferentes contextos criativos.</p>
+                </div>
+                <div class="space-2">
+                    <div> </div>
+                </div>
+                <div class="servicos-box">
+                    <h1>Prototipagem</h1>
+                    <p>Desenvolvemos o design das telas de aplicativos, servindo como base para implementação e teste de experiência do usuário.</p>
+                </div>
+                <div class="space-2">
+                    <div> </div>
+                </div>
+                <div class="servicos-box">
+                    <h1>Teste de Usabilidade</h1>
+                    <p>Identificamos melhorias no produto digital através das interações dos usuários com diferentes versões do protótipo desenvolvido.</p>
+                </div>
+                <div class="space-2">
+                    <div> </div>
+                </div>
+                <div class="servicos-box">
+                    <h1>Branding Digital</h1>
+                    <p>Construímos a imagem da sua empresa durante o processo, garantindo uma comunicação eficaz no resultado final.</p>
+                </div>
+                <div class="space-2">
+                    <div> </div>
+                </div>
+                <div class="servicos-box">
+                    <h1>Pesquisa</h1>
+                    <p>Utilizamos metodologias para compreender as demandas do seu público-alvo, garantindo soluções alinhadas às necessidades.</p>
+                </div>
             </div>
+        </div>
+
+        <!-- Barra cinza -->
+        <div class="space">
+            <div> </div>
         </div>
 
         <!-- Nossos clientes -->
