--- a/index.html
+++ b/index.html
@@ -108,35 +108,40 @@
                 </div>
                 <div class="servicos-box">
                     <h1>Design System</h1>
-                    <p>Criamos uma estrutura visual sólida para guiar o processo de criação, facilitando o uso em diferentes contextos criativos.</p>
+                    <p>Criamos uma estrutura visual sólida para guiar o processo de criação, facilitando o uso em
+                        diferentes contextos criativos.</p>
                 </div>
                 <div class="space-2">
                     <div> </div>
                 </div>
                 <div class="servicos-box">
                     <h1>Prototipagem</h1>
-                    <p>Desenvolvemos o design das telas de aplicativos, servindo como base para implementação e teste de experiência do usuário.</p>
+                    <p>Desenvolvemos o design das telas de aplicativos, servindo como base para implementação e teste de
+                        experiência do usuário.</p>
                 </div>
                 <div class="space-2">
                     <div> </div>
                 </div>
                 <div class="servicos-box">
                     <h1>Teste de Usabilidade</h1>
-                    <p>Identificamos melhorias no produto digital através das interações dos usuários com diferentes versões do protótipo desenvolvido.</p>
+                    <p>Identificamos melhorias no produto digital através das interações dos usuários com diferentes
+                        versões do protótipo desenvolvido.</p>
                 </div>
                 <div class="space-2">
                     <div> </div>
                 </div>
                 <div class="servicos-box">
                     <h1>Branding Digital</h1>
-                    <p>Construímos a imagem da sua empresa durante o processo, garantindo uma comunicação eficaz no resultado final.</p>
+                    <p>Construímos a imagem da sua empresa durante o processo, garantindo uma comunicação eficaz no
+                        resultado final.</p>
                 </div>
                 <div class="space-2">
                     <div> </div>
                 </div>
                 <div class="servicos-box">
                     <h1>Pesquisa</h1>
-                    <p>Utilizamos metodologias para compreender as demandas do seu público-alvo, garantindo soluções alinhadas às necessidades.</p>
+                    <p>Utilizamos metodologias para compreender as demandas do seu público-alvo, garantindo soluções
+                        alinhadas às necessidades.</p>
                 </div>
             </div>
         </div>
@@ -148,27 +153,85 @@
 
         <!-- Nossos clientes -->
         <div class="box-6">
-            <div class="clientes">1</div>
-            <div class="clientes">2</div>
-            <div class="clientes">3</div>
+            <div class="cliente-1">
+                <h1>Nossos clientes confiam no processo</h1>
+            </div>
+            <div class="cliente-2">
+                <h1>Apple</h1>
+                <p>Utilizamos metodologias para compreender as demandas e problemas do seu público-alvo, garantindo
+                    soluções alinhadas às necessidades.</p>
+                <a href="">Confira o projeto</a>
+            </div>
+            <div class="cliente-3">
+                <h1>Nike</h1>
+                <p>Utilizamos metodologias para compreender as demandas e problemas do seu público-alvo, garantindo
+                    soluções alinhadas às necessidades.</p>
+                <a href="">Confira o projeto</a>
+            </div>
+        </div>
+
+        <!-- Barra cinza -->
+        <div class="space">
+            <div> </div>
         </div>
 
         <!-- Nossa equipe -->
         <div class="box-7">
-            <h1>Nossa equipe</h1>
+            <h1 class="nossa-equipe">Nossa equipe</h1>
             <div class="equipe">
-                <div class="equipe-box">1</div>
-                <div class="equipe-box">2</div>
-                <div class="equipe-box">3</div>
-                <div class="equipe-box">4</div>
+                <div class="equipe-box">
+                    <div class="foto-1">
+                        <img src="./images/joão.svg" alt="foto-joao">
+                    </div>
+                    <div class="info-1">
+                        <h1>João Victor</h1>
+                        <h2>UX Designer & Writer</h2>
+                        <p>Especialista em pesquisa de mercado e redação de tom de voz digital.</p>
+                    </div>
+                </div>
+                <div class="equipe-box">
+                    <div class="info-1">
+                        <h1>Matias Pegasano</h1>
+                        <h2>UX & UI Designer</h2>
+                        <p>Especialista em pesquisa de mercado e prototipação de interfaces digitais.</p>
+                    </div>
+                    <div class="foto-1">
+                        <img src="./images/matias.svg" alt="foto-joao">
+                    </div>
+                </div>
+                <div class="equipe-box">
+                    <div class="foto-1">
+                        <img src="./images/lucas.svg" alt="foto-joao">
+                    </div>
+                    <div class="info-1">
+                        <h1>Lucas Freitas</h1>
+                        <h2>UX Designer & Ilustrador</h2>
+                        <p>Especialista em pesquisa de mercado e ilustração para ambientes digitais.</p>
+                    </div>
+                </div>
+                <div class="equipe-box">
+                    <div class="info-1">
+                        <h1>Davi Cangerana</h1>
+                        <h2>UX Designer & Editor</h2>
+                        <p>Especialista em pesquisa de mercado e edição de imagens e vídeos profissionais.</p>
+                    </div>
+                    <div class="foto-1">
+                        <img src="./images/davi.svg" alt="foto-joao">
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- Nosso blog -->
         <div class="blog">
-            <h1>Nosso blog</h1>
-            <p>Os integrantes são confiáveis e responsáveis para trabalhar com flexibilidade, buscando o equilíbrio
-                entre resultados e saúde.</p>
+            <div class="title-link">
+                <h1>Nosso blog</h1>
+                <a href=""><img src="./images/export-orange.svg" alt=""></a>
+            </div>
+            <div class="p-blog">
+                <p>Os integrantes são confiáveis e responsáveis para trabalhar com flexibilidade, buscando o equilíbrio
+                    entre resultados e saúde.</p>
+            </div>
         </div>
 
         <!-- Vamos conversar -->
@@ -183,18 +246,67 @@
         <form action="">
             <div class="form-info">
                 <input type="text" name="name" id="name" placeholder="Seu nome"><br>
-                <input type="text" name="name" id="name" placeholder="Seu email"><br>
-                <textarea id="comments" placeholder="Sua mensagem"></textarea><br>
-                <input type="text" name="name" id="name" placeholder="Como nos conheceu?">
+                <input type="email" name="email" id="email" placeholder="Seu email"><br>
+                <input type="text" name="mensagem" id="mensagem" placeholder="Sua mensagem"><br>
+                <input type="text" name="conhecer" id="conhecer" placeholder="Como nos conheceu?">
             </div>
             <div class="form-submit">
                 <button type="submit">Enviar</button>
             </div>
         </form>
+
+        <!-- Contatos -->
+        <div class="box-8">
+            <div class="telefone">
+                <h1>Telefone</h1>
+                <p>+55 11 984562589</p>
+            </div>
+            <div class="email">
+                <h1>E-mail</h1>
+                <p>contato.aro@gmail.com</p>
+            </div>
+            <div class="social">
+                <a href="">
+                    <img src="./images/instagram.svg" alt="instagram">
+                </a>
+                <a href="">
+                    <img src="./images/whatsapp.svg" alt="whatsapp">
+                </a>
+                <a href="">
+                    <img src="./images/be.svg" alt="be">
+                </a>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
-        FOOTER
+        <div class="box-footer">
+            <div class="logo-copyright">
+                <div class="logo-white-footer">
+                    <img src="./images/aro-white.svg" alt="logo">
+                </div>
+                <div class="copyright">
+                    <img src="./images/copyright.svg" alt="">
+                    <p>Copyright - Estúdio aro.</p>
+                </div>
+            </div>
+            <div class="datos">
+                <p>Política de Privacidade</p>
+                <p>Ética e Compliance</p>
+                <p>contato.aro@gmail.com</p>
+            </div>
+            <div class="social-footer">
+                <a href="">
+                    <img src="./images/instagram-white.svg" alt="instagram">
+                </a>
+                <a href="">
+                    <img src="./images/whatsapp-white.svg" alt="whatsapp">
+                </a>
+                <a href="">
+                    <img src="./images/be-white.svg" alt="be">
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 
