--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="article-1">
                 <h1>Criamos produtos digitais com valor</h1>
                 <p>Por meio de abordagem estratégia e técnica, elevamos o valor percebido do seu produto digital</p>
+                <img src="./images/iphone_background.svg" alt="iphone image">
             </div>
             <div class="article-2">
                 <div class="gif">
