Página inicial mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             <div class="article-1">
                 <h1>Criamos produtos digitais com valor</h1>
                 <p>Por meio de abordagem estratégia e técnica, elevamos o valor percebido do seu produto digital</p>
-                <img src="./images/iphone_background.svg" alt="iphone image">
             </div>
             <div class="article-2">
                 <div class="gif">
@@ -46,7 +45,7 @@
         <!-- Contenedor del Soul Cycle -->
         <div class="box-2">
             <div class="boxes-arriba">
-                <div class="boxes-arriba-unidad color-diferente">Último projeto</div>
+                <div class="boxes-arriba-unidad color-diferente"><a href="">Último projeto</a></div>
                 <div class="boxes-arriba-unidad arriba-hidde">Consultoria</div>
                 <div class="boxes-arriba-unidad arriba-hidde">UX Design</div>
                 <div class="boxes-arriba-unidad arriba-hidde">Website</div>
@@ -54,7 +53,7 @@
             <div class="boxes-abajo">
                 <div class="boxes-abajo-unidad">Soul Cycles</div>
                 <div class="boxes-abajo-unidad">
-                    <img src="./images/export.svg" alt="export">
+                    <a target="_blank" href="https://www.soulcycles.com.br/"><img src="./images/export.svg" alt="export"></a>
                 </div>
             </div>
         </div>
