Página inicial mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <nav>
             <div class="header-image">
-                <img src="./images/aro.svg" alt="logo">
+                <a href=""><img src="./images/aro.svg" alt="logo"></a>
             </div>
             <div class="header-description">
                 <p>Sobre nós</p>
@@ -53,7 +53,8 @@
             <div class="boxes-abajo">
                 <div class="boxes-abajo-unidad">Soul Cycles</div>
                 <div class="boxes-abajo-unidad">
-                    <a target="_blank" href="https://www.soulcycles.com.br/"><img src="./images/export.svg" alt="export"></a>
+                    <a target="_blank" href="https://www.soulcycles.com.br/"><img src="./images/export.svg"
+                            alt="export"></a>
                 </div>
             </div>
         </div>
@@ -75,19 +76,19 @@
         <div class="box-4">
             <h1>Nosso Processo</h1>
             <div class="procesos">
-                <div class="proceso-box proceso-1">
+                <div class="proceso-box box-image-1">
                     <h1>Descobrir</h1>
                     <p>Compreendemos o problema a fundo por meio de pesquisas e explorando o contexto do produto.</p>
                 </div>
-                <div class="proceso-box proceso-2">
+                <div class="proceso-box box-image-2">
                     <h1>Definir</h1>
                     <p>Desenvolvemos o conceito a partir da pesquisa, abordando o problema de forma direta.</p>
                 </div>
-                <div class="proceso-box proceso-3">
+                <div class="proceso-box box-image-3">
                     <h1>Desenvolver</h1>
                     <p>Ideamos principais soluções e caminhos possíveis a partir de um processo criativo e técnico.</p>
                 </div>
-                <div class="proceso-box proceso-4">
+                <div class="proceso-box box-image-4">
                     <h1>Entregar</h1>
                     <p>Materializamos a solução e testamos para garantir o melhor refinamento do produto criado.</p>
                 </div>
@@ -103,42 +104,42 @@
         <div class="box-5">
             <h1>Nossos serviços</h1>
             <div class="servicos">
-                <div class="space-2">
-                    <div> </div>
-                </div>
                 <div class="servicos-box">
+                    <div class="space-2">
+                        <div> </div>
+                    </div>
                     <h1>Design System</h1>
                     <p>Criamos uma estrutura visual sólida para guiar o processo de criação, facilitando o uso em
                         diferentes contextos criativos.</p>
                 </div>
-                <div class="space-2">
-                    <div> </div>
-                </div>
                 <div class="servicos-box">
+                    <div class="space-2">
+                        <div> </div>
+                    </div>
                     <h1>Prototipagem</h1>
                     <p>Desenvolvemos o design das telas de aplicativos, servindo como base para implementação e teste de
                         experiência do usuário.</p>
                 </div>
-                <div class="space-2">
-                    <div> </div>
-                </div>
                 <div class="servicos-box">
+                    <div class="space-2">
+                        <div> </div>
+                    </div>
                     <h1>Teste de Usabilidade</h1>
                     <p>Identificamos melhorias no produto digital através das interações dos usuários com diferentes
                         versões do protótipo desenvolvido.</p>
                 </div>
-                <div class="space-2">
-                    <div> </div>
-                </div>
                 <div class="servicos-box">
+                    <div class="space-2">
+                        <div> </div>
+                    </div>
                     <h1>Branding Digital</h1>
                     <p>Construímos a imagem da sua empresa durante o processo, garantindo uma comunicação eficaz no
                         resultado final.</p>
                 </div>
-                <div class="space-2">
-                    <div> </div>
-                </div>
                 <div class="servicos-box">
+                    <div class="space-2">
+                        <div> </div>
+                    </div>
                     <h1>Pesquisa</h1>
                     <p>Utilizamos metodologias para compreender as demandas do seu público-alvo, garantindo soluções
                         alinhadas às necessidades.</p>
@@ -177,7 +178,7 @@
 
         <!-- Nossa equipe -->
         <div class="box-7">
-            <h1 class="nossa-equipe">Nossa equipe</h1>
+            <h1>Nossa equipe</h1>
             <div class="equipe">
                 <div class="equipe-box">
                     <div class="foto-1">
@@ -291,9 +292,9 @@
                 </div>
             </div>
             <div class="datos">
-                <p>Política de Privacidade</p>
-                <p>Ética e Compliance</p>
-                <p>contato.aro@gmail.com</p>
+                <a href=""><p>Política de Privacidade</p></a>
+                <a href=""><p>Ética e Compliance</p></a>
+                <a href=""><p>contato.aro@gmail.com</p></a>
             </div>
             <div class="social-footer">
                 <a href="">
