Página inicial mobile

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Archivo CSS -->
-    <link rel="stylesheet" href="../Aro/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Fichero JS -->
-    <script src="../Aro/script.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Aro</title>
-    <link rel="shortcut icon" href="../Aro/images/aro.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/aro.svg" type="image/x-icon">
 </head>
 
 <body>
